# Minerva

./: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: build-image.yml  manual-release.yml  tests.yml
docker/: minerva-run-plan.toml.example  minerva-run.sh
docker/examples/: minerva-run-plan.toml
docker/prompts/: daily.txt  hourly.txt
src/minerva/: __init__.py  config.py  llm.py  logging_utils.py  main.py  media.py  notifications.py  persistence.py  pipeline.py  prompts.py  runplan.py  todos.py
src/minerva/tools/: __init__.py  common.py  fetch.py  podcast.py  publish.py  runplan_env.py  summarise.py
tests/: test_minerva_run_cli.py  test_pipeline_split.py  test_runplan.py  test_runplan_env.py  test_tools_common.py
