[project]
name = "minerva"
version = "0.1.0"
description = "CLI tools for reading Diana todo lists from Firestore"
readme = "README.md"
authors = [{ name = "Minerva" }]
requires-python = ">=3.11"
dependencies = [
    "google-cloud-firestore>=2.16.0",
    "httpx>=0.27.0",
    "groq>=0.4.0",
    "rich>=13.7.0",
    "fal-client>=0.4.0",
    "python-telegram-bot>=21.1.0"
]

[project.scripts]
list-todos = "minerva.main:main"
fetch-todos = "minerva.tools.fetch:main"
summarize-todos = "minerva.tools.summarise:main"
publish-summary = "minerva.tools.publish:main"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
